refatorando mapeamento de entidades

--- a/geosertao-core/pom.xml
+++ b/geosertao-core/pom.xml
@@ -12,11 +12,16 @@
     <name>GeoSertão - Core</name>
     <packaging>jar</packaging>
     
-    <dependencies>        
+    <dependencies>
         <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
-            <version>2.5.2</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.10.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vividsolutions</groupId>
+            <artifactId>jts</artifactId>
+            <version>1.13</version>
         </dependency>
     </dependencies>
     
